dev/bases/traefik/traefik-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ingress-traefik
spec:
  ports:
    - protocol: TCP
      name: sftp
      port: 2022
      targetPort: 2022
